# Fresco-Account-Manager

./: .dockerignore  .env.example  .gitignore  ACCOUNT_MANAGER.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  docker-compose.yml  package.json
.github/workflows/: ci.yml
agent_docs/: PROJECT_INTEGRATION.md  PROJECT_PREFS.md
crates/fam-core/: Cargo.toml
crates/fam-core/src/: auth.rs  crypto.rs  lib.rs  mock_projects.rs  models.rs  project_rpc.rs  provisioning.rs
crates/fam-core/src/xml/: mod.rs  project_config.rs  reply.rs  request.rs
crates/fam-server/: Cargo.toml
crates/fam-server/src/: background.rs  config.rs  error.rs  main.rs  state.rs
crates/fam-server/src/routes/: health.rs  mod.rs  project_config.rs  rpc.rs
crates/fam-server/src/routes/api/: admin.rs  auth.rs  hosts.rs  mod.rs  preferences.rs  projects.rs  stats.rs  user_projects.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.vue  AppSidebar.vue
frontend/src/composables/: useGlobalPrefsParser.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  projects.ts
frontend/src/styles/: tokens.css
frontend/src/views/: AdminView.vue  DashboardView.vue  HostsView.vue  LoginView.vue  MyProjectsView.vue  PreferencesView.vue  ProjectCatalogView.vue  RegisterView.vue  SettingsView.vue  StatsView.vue
migrations/: 001_baseline.sql  002_users.sql  003_hosts.sql  004_projects.sql  005_user_projects.sql  006_sessions.sql  007_hosts_expand.sql  008_preferences.sql  009_advanced.sql  010_stats.sql  011_no_rsc_and_update_flag.sql
