[workspace]
resolver = "2"
members = ["crates/fam-server", "crates/fam-core"]

[workspace.dependencies]
fam-core = { path = "crates/fam-core" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "time",
    "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
rsa = "0.9"
